name:                astroids-without-a-twist
version:             0.1.0.0
author:              Hugo Krul
maintainer:          hugo.krul@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable gloss-counter
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , View
                     , Ship
                     , Bullet
                     , Astroid
                     , Imports
  default-language:    Haskell2010